# bagel-rs

./: .gitignore  Cargo.toml
lib/bgl/: arrays.bgl  booleans.bgl  core.bgl  fetch.bgl  iterables.bgl  iterators.bgl  numbers.bgl  objects.bgl  regexp.bgl  strings.bgl  uri.bgl
lib/ts/: core.ts  reactivity.ts
sample_files/: bagel.config.json  scratch.bgl
sample_files/pokemon-app/: bagel.config.json
src/: ast.rs  bgl_type.rs  check.rs  cli.rs  compile.rs  config.rs  errors.rs  format.rs  main.rs  parse.rs  parse_2.rs  parse_utils.rs  precedence.rs  resolve.rs  slice.rs  string_and_slice.rs  typecheck.rs  typeinfer.rs  utils.rs
src/_model/: ast.rs
src/ast/: declaration.rs  expression.rs  misc.rs  mod.rs  statement.rs  type_expression.rs
src/cli/: command.rs  mod.rs  model.rs
src/model/: ast.rs  bgl_type.rs  errors.rs  expressions.rs  misc.rs  mod.rs  module.rs  module_id.rs  parsed_module.rs  slice.rs  string_and_slice.rs  typ.rs  type_expressions.rs
src/model/ast/: ast.rs  declaration.rs  expression.rs  misc.rs  mod.rs  statement.rs  type_expression.rs
src/passes/: bundle.rs  check.rs  compile.rs  context_conversions.rs  format.rs  infer_type.rs  mod.rs  parse.rs  resolve.rs  resolve_symbol.rs  resolve_type.rs  typeinfer.rs
src/tests/: check.rs  compile.rs  mod.rs
