[package]
name = "bagel"
version = "0.1.0"
authors = ["Brandon Smith <mail@brandons.me>"]
edition = "2021"

[dependencies]
clap = { version = "= 4.0.27", features = ["derive"] }
colored = "2.0.0"
enum_variant_type = "0.3.1"
lazy_static = "1.4.0"
Boa = "0.13.0"
nom = "7"
glob = "0.3.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
strum = "0.24"
strum_macros = "0.24"
memoize = "0.3.1"
url-escape = "0.1.1"
regex = "1"