[package]
name = "bagel"
version = "0.1.0"
authors = ["Brandon Smith <mail@brandons.me>"]
edition = "2021"

[dependencies]
clap = { version = "= 4.0.27", features = ["derive"] }
colored = "2.0.0"
enum_variant_type = "0.3.1"
lazy_static = "1.4.0"
Boa = "0.13.0"
nom = "7"
glob = "0.3.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
strum = "0.24"
strum_macros = "0.24"
memoize = "0.3.1"
url-escape = "0.1.1"
regex = "1"
serde = "1.0.152"
serde_json = "1.0.91"

# SWC and related dependencies
swc = "0.259.6"
swc_ecma_parser = "0.132.6"
swc_ecma_transforms = "0.216.4"
swc_ecma_minifier = "0.179.5"
swc_ecma_lints = "0.80.1"
swc_ecma_ast = "0.102.5"
swc_common = "0.30.5"
swc_config = "0.1.5"
indexmap = "*"
ahash = "*"